@@ -145,6 +145,7 @@ Views 6.x-3.0-dev
     o #833790: Click sort could break on fields that were actually formulas.
     o #965496 by ayalon: Update and Override broke validation of most views admin forms.
     o #626732 by dereine: Added a test for analyze.
+    o #870792 by bojanz, dereine: Test validation features of filter and filter_date handler.
 
 Views 6.x-3.0-alpha3
     o #705668 by dereine: Fix glossary view, add tests for glossary view.
